--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # pycharm
 .idea
 
-# thumbnails
+# thumbnails and uploads
 thumbnails
+uploads
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
