--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-click >= 6.6
-Flask >= 0.11.1
-Flask-SQLAlchemy >= 2.1
-Flask-WTF >= 0.13.1
-itsdangerous >= 0.24
-Jinja2 >= 2.8
-MarkupSafe >= 0.23
-SQLAlchemy >= 1.1.4
-Werkzeug >= 0.11.11
-WTForms >= 2.1
+bleach==1.5.0
+click==6.6
+Flask==0.11.1
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.13.1
+html5lib==0.9999999
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+six==1.10.0
+SQLAlchemy==1.1.4
+Werkzeug==0.11.11
+WTForms==2.1
