--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ html5lib==0.9999999
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+Pillow==3.4.2
 six==1.10.0
 SQLAlchemy==1.1.4
 Werkzeug==0.11.11
